# NLP-to-SQL

./: .env  LICENSE  README.md  pyproject.toml  requirements.txt
app/: deps.py  main.py  models.py
app/services/: db.py  llm.py  nlp2sql.py
app/templates/: index.html
